--- a/src/app/paginas/pages/principal.component.html
+++ b/src/app/paginas/pages/principal.component.html
@@ -111,9 +111,9 @@
         </div>
     </div>
 </div>
-<div id="loading" class="animate__animated" #loading>
+<!-- <div id="loading" class="animate__animated" #loading>
     <img id="imgLoader" src="../../assets/loading.gif" #imgLoader alt="Cargando...">
-</div>
+</div> -->
 <!-- contacto -->
 <div class="container contenedorAbout" id="contContacto">
     <div class="row">
@@ -154,9 +154,9 @@
 <!-- boton whatsap -->
 <a href="https://api.whatsapp.com/send?phone=50769250167&text=Hola,%20quisiera%20hacerle%20una%20pregunta" target="_blank"> <i id="botonWhats" class="fab fa-whatsapp"></i></a>
 <app-footer></app-footer>
-<div id="loading" #loadgin style="display: none;">
+<!-- <div id="loading" #loadgin style="display: none;">
     <div class="spinner">
         <div class="cube1"></div>
         <div class="cube2"></div>
     </div>
-</div>
+</div> -->
